# product-cli

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  requests.jsonl  server.json
.github/workflows/: product-ci.yml  publish-agentics.yml  publish-mcp.yml  release.yml
.product/: config.toml  request-log.jsonl  requests.jsonl
conventions/: README.md
conventions/adr/: ADR-0003-cargo-deny.md  ADR-0004-ctxid-newtype.md  ADR-0005-fitness-checks.md
conventions/docs/: CTX-DEPS.md  CTX003.md  CTX004.md  CTX005.md
docs/: checklist.md  gaps.json
docs/adrs/: ADR-002-yaml-front-matter-as-the-graph-source-of-truth.md  ADR-006-context-bundle-as-the-primary-llm-interface.md  ADR-012-graph-theory-foundations-for-navigation-context-an.md  ADR-013-error-model-and-user-facing-error-format.md  ADR-015-file-write-safety-atomic-writes-and-advisory-locki.md  ADR-018-testing-strategy-property-based-integration-and-ll.md  ADR-020-mcp-server-dual-transport-stdio-and-http.md  ADR-021-implementation-pipeline-product-verify-and-the-kno.md  ADR-022-authoring-resources-system-prompts-and-pre-commit.md  ADR-038-product-request-unified-atomic-write-interface.md  ADR-039-hash-chained-request-log-for-tamper-evident-audit.md  ADR-040-unified-verify-pipeline-and-the-llm-boundary.md  ADR-041-removal-deprecation-verification-absence-tcs-and-a.md  ADR-042-tc-type-system-reserved-structural-types-and-open.md  ADR-043-slice-adapter-architecture-for-command-handlers.md  ADR-045-planning-annotations-due-dates-as-advisory-signals.md  ADR-047-functional-specification-lives-in-feature-body-not.md  ADR-048-canonical-repository-layout-all-product-state-unde.md  ADR-049-per-model-context-bundle-templates-as-data-files.md  ADR-050-introduce-pattern-pat-artifact-type-for-implementa.md  ADR-051-tc-observability-requirement-causation-over-transa.md
docs/features/: FT-001-core-concepts.md  FT-002-repository-layout.md  FT-003-front-matter-schema.md  FT-004-artifact-authoring.md  FT-005-formal-specification.md  FT-006-impact-analysis.md  FT-007-formal-specification.md  FT-008-schema-migration.md  FT-009-formal-specification.md  FT-010-cli-commands.md  FT-011-context-bundle-format.md  FT-012-feature-ft-001-cluster-foundation.md  (+62 more)
src/: config.rs  config_features.rs  config_observability.rs  config_paths.rs  config_patterns.rs  config_request_builder.rs  config_sections.rs  error.rs  field_schema.rs  hash.rs  lib.rs  main.rs  parser.rs  parser_tests.rs  pattern_types.rs  rdf.rs  root.rs  types.rs  types_artifact.rs
tests/: code_quality_tests.rs  sessions.rs
xtask/: Cargo.toml
xtask/src/: check_id.rs  conventions.rs  drift.rs  lib.rs  main.rs
xtask/src/checks/: ctx001_file_length.rs  ctx004_single_responsibility.rs  ctx005_function_length.rs  mod.rs
(+614 files in other folders)
